Sat Apr 17 01:32:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* io.c (rb_io_rewind, rb_io_eof): add rdoc.  based on a patch from
	  Roger Pack in [ruby-core:26771] [Bug #2377].

Fri Apr 16 23:42:56 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_folderitem2_invokeverb.rb (test_invokeverb):
	  run test only when "Create Shortcut (&S)" menu is found. 
	  [ruby-core:29550] [Bug #1602]

Fri Apr 16 21:52:16 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (string_content, etc): counts of CMDARG_PUSH and POP were
	  inconsistent.  [ruby-core:22637]

Fri Apr 16 21:27:57 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_coerce): revert r23389,
	  which not only is unnecessary but also causes the inconsistency of
	  return type.  [ruby-core:25706] [Bug #2129]

Fri Apr 16 20:05:24 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/thread.rb (Queue#push, #pop, SizedQueue#push, #pop): remove
	  code that kicks waiting thread twice, which caused race and
	  deadlock.  a patch from James M. Lawrence.  [ruby-core:25537]

	* test/thread/test_queue.rb: added.

Fri Apr 16 20:01:47 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* .gitignore: updated.

Fri Apr 16 16:51:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/file2lastrev.rb (VCS::SVN::get_revisions.): remind about
	  DOSISH, sometimes.

Fri Apr 16 16:15:40 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_repeated_permutation): new method added. a patch
	  from Makoto Kishimoto in [ruby-core:29267]   [ruby-core:28724]

	* array.c (rb_ary_repeated_combination): ditto.

Thu Apr 15 22:41:47 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_thread_priority, rb_thread_priority_set): fix rdoc.
	  Lower-priority thread may run even if there are higher-priority
	  threads.  See [ruby-dev:40977].

Thu Apr 15 22:33:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/uri/ftp.rb (URI::FTP#set_path): added to correct handling of